--- a/Mern_blogs_app-frontend/index.html
+++ b/Mern_blogs_app-frontend/index.html
@@ -6,7 +6,7 @@
 
     <link href="/src/App.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Blog App</title>
   </head>
   <body>
     <div id="root"></div>
